--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -268,10 +268,32 @@
                                     <a class="btn btn-danger btn-block linkPointer" data-toggle="modal" data-target="#RejectedModalId" data-placement="top">Proceed to Reject</a>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block">Proceed to Approve</button>
+                                    @*<button type="submit" id="btnSave" class="btn btn-primary btn-block">Proceed to Approve</button>*@
+                                    <a class="btn btn-primary btn-block linkPointer" data-toggle="modal" data-target="#ApprovedModalId" data-placement="top">Proceed to Approve</a>
                                 </div>
                             </div>
                         </div>
+                        <!-- Approve Modal-->
+                        <div class="modal fade" id="ApprovedModalId" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                                            &times;
+                                        </button>
+                                        <h4 class="modal-title text-primary"><b>Bill Requisition Approval</b></h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <h3 class="text-secondary text-center">Are you sure about approving the requisition?</h3>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-outline-warning" data-dismiss="modal">Go Back</button>
+                                        <button type="submit" id="btnDelete" class="deleteId btn btn-success">Approve</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Approve Modal-->
                     }
                 </div>
             </div>
@@ -281,7 +303,6 @@
 
 @using (Html.BeginForm("PMReject", "BillRequisition", FormMethod.Post, new { id = "RejectedFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     @Html.HiddenFor(model => model.BillRequisitionMasterId, new { Value = Model.BillRequisitionMasterId, id = "RejectedBillRequisitionMasterId" })
 
     <div class="modal fade" id="RejectedModalId" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
@@ -291,21 +312,21 @@
                     <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
                         &times;
                     </button>
-                    <h5 class="modal-title text-primary"><b>Do you want to proceed with the rejection?</b></h5>
+                    <h4 class="modal-title text-primary"><b>Do you want to proceed with the rejection?</b></h4>
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-12 py-4">
+                        <div class="col-md-12 py-5">
                             <label class="text-secondary">The reason for the rejection :</label>
                         </div>
-                        <div class="col-md-12 py-4">
+                        <div class="col-md-12 py-5">
                             @Html.TextAreaFor(model => model.Remarks, new { @class = "modal-input form-control" })
                         </div>
                     </div>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-info" data-dismiss="modal">Go Back</button>
+                    <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-outline-warning" data-dismiss="modal">Go Back</button>
                     <button type="submit" id="btnDelete" class="deleteId btn btn-danger">Reject</button>
                 </div>
             </div>
