--- a/KGERP/Views/BillRequisition/QSBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/QSBRApproveSlave.cshtml
@@ -171,11 +171,7 @@
                                                             @String.Format("{0:0.00}", item.UnitRate)
                                                         }
                                                     </td>
-
-                                                    @*<td class="unitRate" style="padding: 5px; text-align: right;">@String.Format("{0:0.00}", item.UnitRate)</td>*@
                                                     <td class="lineTotal" style="padding: 5px;  text-align: right;">@String.Format("{0:0.00}", item.TotalPrice)</td>
-
-
                                                     @{
                                                         totalPrice += item.TotalPrice;
                                                     };
@@ -275,12 +271,32 @@
                                     </a>
                                 </div>
                                 <div class="col-md-3">
-                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block">Approve</button>
+                                    <a class="btn btn-primary btn-block linkPointer" data-toggle="modal" data-target="#ApprovedModalId" data-placement="top">Proceed to Approve</a>
                                 </div>
                             </div>
                         </div>
+                        <!-- Approve Modal-->
+                        <div class="modal fade" id="ApprovedModalId" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                                            &times;
+                                        </button>
+                                        <h4 class="modal-title text-primary"><b>Bill Requisition Approval</b></h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <h3 class="text-secondary text-center">Are you sure about approving the requisition?</h3>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-outline-warning" data-dismiss="modal">Go Back</button>
+                                        <button type="submit" id="btnDelete" class="deleteId btn btn-success">Approve</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Approve Modal-->
                     }
-
                 </div>
             </div>
         </div>
