--- a/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
@@ -274,9 +274,7 @@
                                 <div class="col-md-3"></div>
                                 <div class="col-md-3"></div>
                                 <div class="col-md-3">
-                                    <a href="~/BillRequisition/PDReject?billRequisitionMasterId=@Model.BillRequisitionMasterId" class="btn btn-danger btn-block">
-                                        Reject
-                                    </a>
+                                    <a class="btn btn-danger btn-block linkPointer" data-toggle="modal" data-target="#RejectedModalId" data-placement="top">Proceed to Reject</a>
                                 </div>
                                 <div class="col-md-3">
                                     <a class="btn btn-primary btn-block linkPointer" data-toggle="modal" data-target="#ApprovedModalId" data-placement="top">Proceed to Approve</a>
@@ -309,6 +307,39 @@
             </div>
         </div>
     </section>
+}
+
+@using (Html.BeginForm("PDReject", "BillRequisition", FormMethod.Post, new { id = "RejectedFormId", @class = "formValidator", onreset = "resetDDL();" }))
+{
+    @Html.HiddenFor(model => model.BillRequisitionMasterId, new { Value = Model.BillRequisitionMasterId, id = "RejectedBillRequisitionMasterId" })
+
+    <div class="modal fade" id="RejectedModalId" data-toggle="modal" data-backdrop="static" data-keyboard="false" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" onclick="resetForm()" class="close pull-right" data-dismiss="modal" aria-label="Close">
+                        &times;
+                    </button>
+                    <h4 class="modal-title text-primary"><b>Bill Requisition Rejection</b></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-md-12 py-5">
+                            <label class="text-secondary">The reason for the rejection :</label>
+                        </div>
+                        <div class="col-md-12 py-5">
+                            @Html.TextAreaFor(model => model.CancelReason, new { @class = "modal-input form-control" })
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" id="btnClose" onclick="resetForm()" class="btn btn-outline-warning" data-dismiss="modal">Go Back</button>
+                    <button type="submit" id="btnDelete" class="deleteId btn btn-danger">Reject</button>
+                </div>
+            </div>
+        </div>
+    </div>
 }
 
 @Scripts.Render("~/bundles/jqueryui")
